--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
         android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:enabled="false"
         android:text="로그인"
         app:layout_constraintBottom_toBottomOf="@id/edit_password"
         app:layout_constraintLeft_toLeftOf="@id/middle_guideline"
